<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SewaActivity">

    <LinearLayout
        android:id="@+id/sewa_body"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_sewaTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lang_sewaTitle"
            android:textSize="30sp"
            android:textAlignment="center"
            android:background="#efefef"
            android:padding="15sp"
            android:layout_marginBottom="10sp"
            />

        <LinearLayout
            android:id="@+id/fg_jenisPenyewaan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_form_sewaType"
                android:layout_width="256dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/lang_form_sewaType" />

            <RadioGroup
                android:id="@+id/rg_sewaType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <RadioButton
                    android:id="@+id/rb_sewaType_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/lang_rb_sewa_ekonomi" />

                <RadioButton
                    android:id="@+id/rb_sewaType_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/lang_rb_sewa_standar" />

                <RadioButton
                    android:id="@+id/rb_sewaType_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/lang_rb_sewa_premium"

                    />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fg_lamaSewa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_lamaSewa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lang_form_lamaSewa" />

            <EditText
                android:id="@+id/et_lama_sewa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"
                android:autofillHints="@string/lang_tooltip_lamaSewa"
                />
        </LinearLayout>

        <Button
            android:id="@+id/btn_submitSewa"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lang_btn_submitSewa" />

        <Button
            android:id="@+id/btn_reset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lang_btn_reset" />

        <LinearLayout
            android:id="@+id/result_sewa"
            android:layout_width="match_parent"
            android:layout_height="177dp"
            android:orientation="vertical"
            android:visibility="invisible"
            >

            <TextView
                android:id="@+id/tv_result_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lang_result_title"
                android:textAlignment="center"
                android:textSize="24sp" />

            <LinearLayout
                android:id="@+id/output_result_sewa"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_result_sewa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:textSize="24sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>