<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/home_body"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_menuTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#efefef"
            android:padding="5sp"
            android:text="@string/lang_menuTitle"
            android:textAlignment="center"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btn_act_sewa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lang_menu_sewa" />

        <Button
            android:id="@+id/btn_act_lingkaran"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lang_menu_lingkaran" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>